--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -15,7 +15,7 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Employee</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Register Employee</a>
+          <a class="dropdown-item" routerLink="/empRegister">Register Employee</a>
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
