--- a/src/app/registeremployee/registeremployee.component.html
+++ b/src/app/registeremployee/registeremployee.component.html
@@ -1,3 +1,310 @@
-<p>
-  registeremployee works!
-</p>
+
+<body>
+
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <a class="navbar-brand" href="#">Royal Bank</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item ">
+        <a class="nav-link" routerLink="/admin">Home <span class="sr-only">(current)</span></a>
+      </li>
+
+      <li class="nav-item dropdown active">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Employee</a>
+        <div class="dropdown-menu" aria-labelledby="dropdown01">
+          <a class="dropdown-item" routerLink="/empRegister">Register Employee</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="py-5 text-center">
+    <img class="d-block mx-auto mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+    <h2>Employee Register</h2>
+
+  </div>
+
+  <div class="row">
+    <!--<div class="col-md-4 order-md-2 mb-4">-->
+      <!--<h4 class="d-flex justify-content-between align-items-center mb-3">-->
+        <!--<span class="text-muted">Your cart</span>-->
+        <!--<span class="badge badge-secondary badge-pill">3</span>-->
+      <!--</h4>-->
+      <!--<ul class="list-group mb-3">-->
+        <!--<li class="list-group-item d-flex justify-content-between lh-condensed">-->
+          <!--<div>-->
+            <!--<h6 class="my-0">Product name</h6>-->
+            <!--<small class="text-muted">Brief description</small>-->
+          <!--</div>-->
+          <!--<span class="text-muted">$12</span>-->
+        <!--</li>-->
+        <!--<li class="list-group-item d-flex justify-content-between lh-condensed">-->
+          <!--<div>-->
+            <!--<h6 class="my-0">Second product</h6>-->
+            <!--<small class="text-muted">Brief description</small>-->
+          <!--</div>-->
+          <!--<span class="text-muted">$8</span>-->
+        <!--</li>-->
+        <!--<li class="list-group-item d-flex justify-content-between lh-condensed">-->
+          <!--<div>-->
+            <!--<h6 class="my-0">Third item</h6>-->
+            <!--<small class="text-muted">Brief description</small>-->
+          <!--</div>-->
+          <!--<span class="text-muted">$5</span>-->
+        <!--</li>-->
+        <!--<li class="list-group-item d-flex justify-content-between bg-light">-->
+          <!--<div class="text-success">-->
+            <!--<h6 class="my-0">Promo code</h6>-->
+            <!--<small>EXAMPLECODE</small>-->
+          <!--</div>-->
+          <!--<span class="text-success">-$5</span>-->
+        <!--</li>-->
+        <!--<li class="list-group-item d-flex justify-content-between">-->
+          <!--<span>Total (USD)</span>-->
+          <!--<strong>$20</strong>-->
+        <!--</li>-->
+      <!--</ul>-->
+
+      <!--<form class="card p-2">-->
+        <!--<div class="input-group">-->
+          <!--<input type="text" class="form-control" placeholder="Promo code">-->
+          <!--<div class="input-group-append">-->
+            <!--<button type="submit" class="btn btn-secondary">Redeem</button>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</form>-->
+    <!--</div>-->
+    <div class="col-md-12 order-md-1">
+
+      <form  #empForm="ngForm">
+        <h5><b>Personal Information</b></h5>
+        <hr class="mb-4">
+        <div class="row">
+
+          <div class="col-md-4 mb-3">
+            <label for="fname">First name</label>
+            <input type="text" class="form-control" id="fname" placeholder=""   name="fname" ngModel>
+            <div class="invalid-feedback">
+              Valid first name is required.
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="mname">Middle Name</label>
+            <input type="text" class="form-control" id="mname" placeholder=""   name="mname" ngModel>
+            <div class="invalid-feedback">
+              Valid last name is required.
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="lname">Last name</label>
+            <input type="text" class="form-control" id="lname" placeholder=""   name="lname" ngModel>
+            <div class="invalid-feedback">
+              Valid last name is required.
+            </div>
+          </div>
+
+
+        <div class="col-md-4 mb-3">
+          <label for="nic">NIC</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">@</span>
+            </div>
+            <input type="text" class="form-control" id="nic" placeholder="NIC"  name="nic" ngModel>
+            <div class="invalid-feedback" style="width: 100%;">
+              Your username is required.
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <label for="email">Email <span class="text-muted"></span></label>
+          <input type="email" class="form-control" id="email" placeholder="you@example.com" name="email" ngModel>
+
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <label for="dob">Date of Birth</label>
+          <input type="date" class="form-control" id="dob" name="dob" ngModel>
+
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <label for="gender">Gender</label>
+          <select class="custom-select d-block w-100" id="gender"  name="gender" ngModel>
+            <option value="">Choose...</option>
+            <option>Male</option>
+            <option>Female</option>
+          </select>
+        </div>
+
+          <div class="col-md-4 mb-3">
+            <label for="address">Address</label>
+            <input type="text" class="form-control" id="address" placeholder="1234 Main St"  name="address" ngModel>
+
+          </div>
+
+          <div class="col-md-4 mb-3">
+            <label for="city">City</label>
+            <input type="text" class="form-control" id="city" placeholder="1234 Main St" required name="city" ngModel>
+
+          </div>
+          <div class="col-md-6 mb-3">
+            <label for="country">Country</label>
+            <select class="custom-select d-block w-100" id="country"  name="country" ngModel>
+              <option value="">Choose...</option>
+              <option>United States</option>
+            </select>
+            <div class="invalid-feedback">
+              Please select a valid country.
+            </div>
+          </div>
+          <div class="col-md-6 mb-3">
+            <label for="tel">Telephone</label>
+            <input type="text" class="form-control" id="tel" placeholder="0713025089"  name="tel" ngModel>
+
+          </div>
+        </div>
+        <!--<div class="row">-->
+
+          <!--<div class="col-md-4 mb-3">-->
+            <!--<label for="state">State</label>-->
+            <!--<select class="custom-select d-block w-100" id="state" required>-->
+              <!--<option value="">Choose...</option>-->
+              <!--<option>California</option>-->
+            <!--</select>-->
+            <!--<div class="invalid-feedback">-->
+              <!--Please provide a valid state.-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="col-md-3 mb-3">-->
+            <!--<label for="zip">Zip</label>-->
+            <!--<input type="text" class="form-control" id="zip" placeholder="" required>-->
+            <!--<div class="invalid-feedback">-->
+              <!--Zip code required.-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <br>
+        <h5><b>Other Information</b></h5>
+
+        <hr class="mb-4">
+        <div class="row">
+          <div class="col-md-4 mb-3">
+            <label for="branchDTO">Branch</label>
+            <select class="custom-select d-block w-100" id="branchDTO"  name="brachid" ngModel>
+              <option value="">Choose Brach</option>
+              <option *ngFor="let branch of branches" [value]="branch.branchID">{{branch.branchName}}</option>
+
+            </select>
+
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="role">Role</label>
+            <select class="custom-select d-block w-100" id="role"  name="role" ngModel>
+              <option value="">Choose Role</option>
+              <option>Branch Manager</option>
+              <option>Branch Assistant Manager</option>
+              <option>Account Creator</option>
+              <option>Cahier</option>
+            </select>
+
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="salary">Salary</label>
+            <input type="text" class="form-control" id="salary" placeholder="75000.00"  name="salary" ngModel>
+
+          </div>
+
+        </div>
+
+
+
+        <!--<div class="custom-control custom-checkbox">-->
+          <!--<input type="checkbox" class="custom-control-input" id="same-address">-->
+          <!--<label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>-->
+        <!--</div>-->
+        <!--<div class="custom-control custom-checkbox">-->
+          <!--<input type="checkbox" class="custom-control-input" id="save-info">-->
+          <!--<label class="custom-control-label" for="save-info">Save this information for next time</label>-->
+        <!--</div>-->
+        <!--<hr class="mb-4">-->
+
+        <!--<h4 class="mb-3">Payment</h4>-->
+
+        <!--<div class="d-block my-3">-->
+          <!--<div class="custom-control custom-radio">-->
+            <!--<input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>-->
+            <!--<label class="custom-control-label" for="credit">Credit card</label>-->
+          <!--</div>-->
+          <!--<div class="custom-control custom-radio">-->
+            <!--<input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>-->
+            <!--<label class="custom-control-label" for="debit">Debit card</label>-->
+          <!--</div>-->
+          <!--<div class="custom-control custom-radio">-->
+            <!--<input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>-->
+            <!--<label class="custom-control-label" for="paypal">PayPal</label>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="row">-->
+          <!--<div class="col-md-6 mb-3">-->
+            <!--<label for="cc-name">Name on card</label>-->
+            <!--<input type="text" class="form-control" id="cc-name" placeholder="" required>-->
+            <!--<small class="text-muted">Full name as displayed on card</small>-->
+            <!--<div class="invalid-feedback">-->
+              <!--Name on card is required-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="col-md-6 mb-3">-->
+            <!--<label for="cc-number">Credit card number</label>-->
+            <!--<input type="text" class="form-control" id="cc-number" placeholder="" required>-->
+            <!--<div class="invalid-feedback">-->
+              <!--Credit card number is required-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="row">-->
+          <!--<div class="col-md-3 mb-3">-->
+            <!--<label for="cc-expiration">Expiration</label>-->
+            <!--<input type="text" class="form-control" id="cc-expiration" placeholder="" required>-->
+            <!--<div class="invalid-feedback">-->
+              <!--Expiration date required-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="col-md-3 mb-3">-->
+            <!--<label for="cc-cvv">CVV</label>-->
+            <!--<input type="text" class="form-control" id="cc-cvv" placeholder="" required>-->
+            <!--<div class="invalid-feedback">-->
+              <!--Security code required-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <hr class="mb-4">
+        <button class="btn btn-primary btn-lg btn-block" type="submit" (click)="registerEmp(empForm)">Register Employee</button>
+      </form>
+    </div>
+  </div>
+
+  <footer class="my-5 pt-5 text-muted text-center text-small">
+    <p class="mb-1">&copy; 2017-2019 Royal Bank</p>
+    <ul class="list-inline">
+      <li class="list-inline-item"><a href="#">Privacy</a></li>
+      <li class="list-inline-item"><a href="#">Terms</a></li>
+      <li class="list-inline-item"><a href="#">Support</a></li>
+    </ul>
+  </footer>
+</div>
+</body>
+
