--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,6 +18,29 @@
   <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="login()">Sign in</button>
   <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
   </div>
+  <button id="btn" hidden #btn data-toggle="modal" data-target="#myModal"></button>
+  <div class="modal fade" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
 
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Royal Bank</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <!-- Modal body -->
+        <div class="modal-body">
+          {{msg}}
+        </div>
+
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </body>
 </html>
