--- a/src/app/sendmoney/sendmoney.component.html
+++ b/src/app/sendmoney/sendmoney.component.html
@@ -16,21 +16,21 @@
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="#">
+            <a class="nav-link" href="#">
               <span data-feather="home"></span>
               Deposit Money <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/withdraw">
+            <a class="nav-link " routerLink="/withdraw">
               <span data-feather="file"></span>
               Withdraw Money
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/sendmoney">
+            <a class="nav-link active" routerLink="/sendmoney">
               <span data-feather="shopping-cart"></span>
-            Send Money
+              Send Money
             </a>
           </li>
           <li class="nav-item">
@@ -104,27 +104,22 @@
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Deposit Money </h1>
+        <h1 class="h2">Send Money </h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group mr-2">
             <h6>You logged as  Mr.<b>{{fullname}}</b></h6>
-            <!--<button type="button" class="btn btn-sm btn-outline-secondary">Share</button>-->
-            <!--<button type="button" class="btn btn-sm btn-outline-secondary">Export</button>-->
           </div>
-          <!--<button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">-->
-            <!--<span data-feather="calendar"></span>-->
-            <!--This week-->
-          <!--</button>-->
+
         </div>
       </div>
 
       <div class="container">
         <div class="row">
 
-          <div class="col-md-6 order-md-1">
+          <div class="col-md-12 order-md-1">
 
             <form  #accform="ngForm">
-              <h5><b>Deposit Information</b></h5>
+              <h5><b>Send Information</b></h5>
               <hr class="mb-4">
               <div class="row">
 
@@ -137,19 +132,19 @@
                 </div>
                 <div class="col-md-2 mb-3">
                   <label for="fname">       </label>
-                  <button class="btn btn-warning" (click)="findByID()">Search</button>
+                  <button class="btn btn-warning" (click)="findByID(accno)">Search</button>
 
                 </div>
                 <div class="col-md-6 mb-3">
-                  <label for="mname">Depositor Name </label>
-                  <input type="text" class="form-control" id="mname" placeholder=""   name="mname" [(ngModel)]="depositerName">
+                  <label for="mname">Money Receive Account</label>
+                  <input type="text" class="form-control" id="mname" placeholder=""   name="mname" [(ngModel)]="receiverAccno">
                   <div class="invalid-feedback">
                     Valid last name is required.
                   </div>
                 </div>
                 <div class="col-md-6 mb-3">
                   <label for="lname">Amount</label>
-                  <input type="number" class="form-control" id="lname" placeholder=""   name="lname" [(ngModel)]="amount">
+                  <input type="number" class="form-control" id="lname" placeholder=""   name="lname" [(ngModel)]="amount" (focus)="findByIDRes(receiverAccno)">
                   <div class="invalid-feedback">
                     Valid last name is required.
                   </div>
@@ -185,25 +180,44 @@
 
 
               <hr class="mb-4">
-              <button class="btn btn-primary btn-lg btn-block" type="submit" (click)="depositMoney()">Deposit Money</button>
+              <button class="btn btn-primary btn-lg btn-block" type="submit" (click)="sendMoney()">Send Money</button>
               <button id="btn" hidden #btn data-toggle="modal" data-target="#myModal"></button>
-                <br>
+              <br>
             </form>
           </div>
 
           <div class="col-md-6 order-md-1">
-            <h5><b>Account Information</b></h5>
+            <h5><b>Send Account Information</b></h5>
             <hr class="mb-4">
 
             <div class="col-md-12 mb-3">
               <h5>Client &nbsp; : Mr . {{clientName}} </h5>
               <br>
+              <h5>NIC &nbsp; :  {{nic}} </h5>
+              <br>
               <h5>Account Type &nbsp; : {{accType}}</h5>
+              <br>
+              <h5>Account Amount &nbsp; : Rs. {{accamount}}</h5>
 
 
             </div>
           </div>
+          <div class="col-md-6 order-md-1">
+            <h5><b>Receive Account Informations</b></h5>
+            <hr class="mb-4">
 
+            <div class="col-md-12 mb-3">
+              <h5>Client &nbsp; : Mr . {{resclientName}} </h5>
+              <br>
+              <h5>NIC &nbsp; :  {{resnic}} </h5>
+              <br>
+              <h5>Account Type &nbsp; : {{resaccType}}</h5>
+              <br>
+
+
+
+            </div>
+          </div>
         </div>
 
 
@@ -239,12 +253,12 @@
 
 
 <!--<footer class="my-5 pt-5 text-muted text-center text-small">-->
-  <!--<p class="mb-1">&copy; 2017-2019 Royal Bank</p>-->
-  <!--<ul class="list-inline">-->
-    <!--<li class="list-inline-item"><a href="#">Privacy</a></li>-->
-    <!--<li class="list-inline-item"><a href="#">Terms</a></li>-->
-    <!--<li class="list-inline-item"><a href="#">Support</a></li>-->
-  <!--</ul>-->
+<!--<p class="mb-1">&copy; 2017-2019 Royal Bank</p>-->
+<!--<ul class="list-inline">-->
+<!--<li class="list-inline-item"><a href="#">Privacy</a></li>-->
+<!--<li class="list-inline-item"><a href="#">Terms</a></li>-->
+<!--<li class="list-inline-item"><a href="#">Support</a></li>-->
+<!--</ul>-->
 <!--</footer>-->
 
 
