--- a/src/app/withdraw/withdraw.component.html
+++ b/src/app/withdraw/withdraw.component.html
@@ -16,13 +16,13 @@
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="#">
+            <a class="nav-link" href="#">
               <span data-feather="home"></span>
               Deposit Money <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/withdraw">
+            <a class="nav-link active" routerLink="/withdraw">
               <span data-feather="file"></span>
               Withdraw Money
             </a>
@@ -30,7 +30,7 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/sendmoney">
               <span data-feather="shopping-cart"></span>
-            Send Money
+              Send Money
             </a>
           </li>
           <li class="nav-item">
@@ -104,17 +104,12 @@
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Deposit Money </h1>
+        <h1 class="h2">Withdraw Money </h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group mr-2">
             <h6>You logged as  Mr.<b>{{fullname}}</b></h6>
-            <!--<button type="button" class="btn btn-sm btn-outline-secondary">Share</button>-->
-            <!--<button type="button" class="btn btn-sm btn-outline-secondary">Export</button>-->
           </div>
-          <!--<button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">-->
-            <!--<span data-feather="calendar"></span>-->
-            <!--This week-->
-          <!--</button>-->
+
         </div>
       </div>
 
@@ -124,7 +119,7 @@
           <div class="col-md-6 order-md-1">
 
             <form  #accform="ngForm">
-              <h5><b>Deposit Information</b></h5>
+              <h5><b>Withdraw Information</b></h5>
               <hr class="mb-4">
               <div class="row">
 
@@ -141,8 +136,8 @@
 
                 </div>
                 <div class="col-md-6 mb-3">
-                  <label for="mname">Depositor Name </label>
-                  <input type="text" class="form-control" id="mname" placeholder=""   name="mname" [(ngModel)]="depositerName">
+                  <label for="mname">Withdrawer  Name </label>
+                  <input type="text" class="form-control" id="mname" placeholder=""   name="mname" [(ngModel)]="widthdrawerName">
                   <div class="invalid-feedback">
                     Valid last name is required.
                   </div>
@@ -185,9 +180,9 @@
 
 
               <hr class="mb-4">
-              <button class="btn btn-primary btn-lg btn-block" type="submit" (click)="depositMoney()">Deposit Money</button>
+              <button class="btn btn-primary btn-lg btn-block" type="submit" (click)="withdrawMoney()">Withdraw Money</button>
               <button id="btn" hidden #btn data-toggle="modal" data-target="#myModal"></button>
-                <br>
+              <br>
             </form>
           </div>
 
@@ -198,7 +193,11 @@
             <div class="col-md-12 mb-3">
               <h5>Client &nbsp; : Mr . {{clientName}} </h5>
               <br>
+              <h5>NIC &nbsp; :  {{nic}} </h5>
+              <br>
               <h5>Account Type &nbsp; : {{accType}}</h5>
+              <br>
+              <h5>Account Amount &nbsp; : Rs. {{accamount}}</h5>
 
 
             </div>
@@ -239,12 +238,12 @@
 
 
 <!--<footer class="my-5 pt-5 text-muted text-center text-small">-->
-  <!--<p class="mb-1">&copy; 2017-2019 Royal Bank</p>-->
-  <!--<ul class="list-inline">-->
-    <!--<li class="list-inline-item"><a href="#">Privacy</a></li>-->
-    <!--<li class="list-inline-item"><a href="#">Terms</a></li>-->
-    <!--<li class="list-inline-item"><a href="#">Support</a></li>-->
-  <!--</ul>-->
+<!--<p class="mb-1">&copy; 2017-2019 Royal Bank</p>-->
+<!--<ul class="list-inline">-->
+<!--<li class="list-inline-item"><a href="#">Privacy</a></li>-->
+<!--<li class="list-inline-item"><a href="#">Terms</a></li>-->
+<!--<li class="list-inline-item"><a href="#">Support</a></li>-->
+<!--</ul>-->
 <!--</footer>-->
 
 
