--- a/src/app/sendmoney/sendmoney.component.html
+++ b/src/app/sendmoney/sendmoney.component.html
@@ -48,6 +48,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">
                   <span data-feather="shopping-cart"></span>
+                  Issue ATM Card
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <span data-feather="shopping-cart"></span>
                   About Client
                 </a>
               </li>
