assign to new server

--- a/src/app/registeremployee/registeremployee.component.html
+++ b/src/app/registeremployee/registeremployee.component.html
@@ -165,7 +165,7 @@
             <label for="country">Country</label>
             <select class="custom-select d-block w-100" id="country"  name="country" ngModel>
               <option value="">Choose...</option>
-              <option value="LK">Sri Lanka</option>
+              <option value="Sri Lanka">Sri Lanka</option>
               <option value="AF">Afghanistan</option>
               <option value="AX">Åland Islands</option>
               <option value="AL">Albania</option>
