--- a/src/app/create-bank-account/create-bank-account.component.html
+++ b/src/app/create-bank-account/create-bank-account.component.html
@@ -236,26 +236,7 @@
 
                 </div>
               </div>
-              <!--<div class="row">-->
 
-              <!--<div class="col-md-4 mb-3">-->
-              <!--<label for="state">State</label>-->
-              <!--<select class="custom-select d-block w-100" id="state" required>-->
-              <!--<option value="">Choose...</option>-->
-              <!--<option>California</option>-->
-              <!--</select>-->
-              <!--<div class="invalid-feedback">-->
-              <!--Please provide a valid state.-->
-              <!--</div>-->
-              <!--</div>-->
-              <!--<div class="col-md-3 mb-3">-->
-              <!--<label for="zip">Zip</label>-->
-              <!--<input type="text" class="form-control" id="zip" placeholder="" required>-->
-              <!--<div class="invalid-feedback">-->
-              <!--Zip code required.-->
-              <!--</div>-->
-              <!--</div>-->
-              <!--</div>-->
               <br>
               <h5><b>Account Information</b></h5>
 
@@ -264,8 +245,7 @@
               <div class="row">
                 <div class="col-md-4 mb-3">
                   <label for="branchDTO">Branch</label>
-                  <select class="custom-select d-block w-100" id="branchDTO" name="branchid" [(ngModel)]="branchID"
-                          (change)="getBranchDTO()">
+                  <select class="custom-select d-block w-100" id="branchDTO" name="branchid">
                     <option value="">Choose Brach</option>
                     <option *ngFor="let branch of branches" [value]="branch.branchID">{{branch.branchName}}</option>
 
@@ -293,18 +273,6 @@
                 <div class="col-md-4 mb-3">
                   <label for="salary">Deposit Amount</label>
                   <input type="text" class="form-control" id="salary" placeholder="75000.00" name="amount" ngModel>
-
-                </div>
-                <div class="col-md-4 mb-3">
-                  <label for="userName">User Name</label>
-                  <input type="text" class="form-control" id="userName" placeholder="User Name" name="userName" ngModel>
-
-                </div>
-
-                <div class="col-md-4 mb-3">
-                  <label for="password">Password</label>
-                  <input type="password" class="form-control" id="password" placeholder="*******" name="password"
-                         ngModel>
 
                 </div>
 
@@ -369,6 +337,5 @@
     </main>
   </div>
 </div>
-
 
 </body>
